Fix bubble width: add width:fit-content to messageBubble for proper shrink-wrap

--- a/client/src/components/ChatWindow/ChatWindow.module.css
+++ b/client/src/components/ChatWindow/ChatWindow.module.css
@@ -178,6 +178,7 @@
   display: flex;
   flex-direction: column;
   max-width: 65%;
+  width: fit-content;
   min-width: 0;
   position: relative;
   animation: fadeInMsg 0.2s ease;
